2010-08-19  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Update for build on RHEL6.

2010-07-23  Albert Chu  <chu11@llnl.gov>

	* META: Update appropriately for invalid versioning during last tag.

	* tagged gendersllnl-1-17-3
	
2010-02-01  Albert Chu  <chu11@llnl.gov>

	* Update copyrights globally.
	
2009-12-23  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Add rdist requirement for dist subpackage.

	* tagged gendersllnl-1-17-2
	
2009-10-09  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Add appropriate build requires.

	* dist/inst.c: Add mode to open call w/ O_CREAT.

	* tagged gendersllnl-1-17-1
	
2009-08-12  Albert Chu  <chu11@llnl.gov>

        * compat/Makefile.am, src/Gendersllnl/Makefile.am: Revert
	portability fixes.

	* src/Libgendersllnl/Makefile.am, gendersllnl.spec.in: Fix
	portability issues.

2009-08-11  Albert Chu  <chu11@llnl.gov>

        * compat/Makefile.am, src/Gendersllnl/Makefile.am: Fix portability
	bug.
	
2009-05-15  Albert Chu  <chu11@llnl.gov>

	* dist/inst.c: Check return code on close.  fsync before calling
	close.
	
2009-02-26  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: Update for release.

	* tagged gendersllnl-1-16-1

2009-02-26  Py Watson <watson30@llnl.gov>

	* dist/dist2: Exit non-zero is rdist exitted non-zero.

2009-02-19  Albert Chu  <chu11@llnl.gov>

	* META: Update for release.

	* tagged gendersllnl-1-15-2

2009-02-18  Albert Chu  <chu11@llnl.gov>

	* config/ac_perl_extensions.m4: New file.

	* configure.ac, src/Libgendersllnl/Makefile.am,
	src/Gendersllnl/Makefile.am, compat/Makefile.am: Support
	capability to not build perl extensions libs.
	
2009-02-18  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Revert sles10 fix from 2008-10-28, issue is
	something else in Suse.

2008-10-28  Albert Chu  <chu11@llnl.gov>

	* gendersllnl.spec.in: Fix sles10 rpmbuild issue.

2008-07-23  Albert Chu  <chu11@llnl.gov>

	* dist/dist2: Fix porting issue for Solaris.
	
	* META, NEWS: Update for release.
