@@ -1,3 +1,7 @@
+2011-01-19  Albert Chu  <chu11@llnl.gov>
+
+	* src/libgendersllnl/gendersllnl.h: Support C++ linking.
+
 2010-08-19  Albert Chu  <chu11@llnl.gov>
 
 	* gendersllnl.spec.in: Update for build on RHEL6.
